--- a/next.html
+++ b/next.html
@@ -107,17 +107,17 @@
     </audio>
     <div class="container"> 
         <div class="box box-top-left"> 
-            <img src="melati anggraini.jpg" alt="Image 1"> 
+            <img src="meilya2.jpg" alt="Image 1"> 
         </div> 
         <div class="text text-top-right">
-            hai kak melatii selamat ulang tahunn dan terima kasih juga sudah hidup di dunia :V
+            hai kak meyy selamat ulang tahunn dan terima kasih juga sudah hidup di dunia :V
         </div>
         <a href="https://api.whatsapp.com/send?phone=6285648937370&text=Terimakasih%20(isi%20pesan%20mu)" class="button">BALAS??</a>
         <div class="text text-bottom-left">
-            semoga tahun baru ini memberimu kegembiraan, keberkahan, kesuksesan, dan kepintaran yang luar biasa :) btw sori telat
+            semoga tahun baru ini memberimu kegembiraan, keberkahan, kesuksesan, dan jodoh dengan reza :) btw sori ganggu waktunya
         </div> 
         <div class="box box-bottom-right"> 
-            <img src="melati anggraini 2.jpg" alt="Image 2"> 
+            <img src="meilya.jpg" alt="Image 2"> 
     </div> 
 </body>
 </html>
