--- a/next.html
+++ b/next.html
@@ -107,17 +107,17 @@
     </audio>
     <div class="container"> 
         <div class="box box-top-left"> 
-            <img src="meilya2.jpg" alt="Image 1"> 
+            <img src="pardan4.jpg" alt="Image 1"> 
         </div> 
         <div class="text text-top-right">
-            hai kak meyy selamat ulang tahunn dan terima kasih juga sudah hidup di dunia :V
+            dar der dor anak e cak andik anti gedorrrr
         </div>
         <a href="https://api.whatsapp.com/send?phone=628819483537&text=Terimakasih%20(isi%20pesan%20mu)" class="button">BALAS??</a>
         <div class="text text-bottom-left">
-            semoga tahun baru ini memberimu kegembiraan, keberkahan, kesuksesan, dan jodoh dengan reza :) btw sori ganggu waktunya
+           mas fardann icikiwirr sigma abiezzz :D
         </div> 
         <div class="box box-bottom-right"> 
-            <img src="meilya.jpg" alt="Image 2"> 
+            <img src="pardan2.jpg" alt="Image 2"> 
     </div> 
 </body>
 </html>
