--- a/next.html
+++ b/next.html
@@ -107,17 +107,17 @@
     </audio>
     <div class="container"> 
         <div class="box box-top-left"> 
-            <img src="pardan4.jpg" alt="Image 1"> 
+            <img src="photo_2025-03-01_20-18-59.jpg" alt="Image 1"> 
         </div> 
         <div class="text text-top-right">
-            dar der dor anak e cak andik anti gedorrrr
+            dar der dor anak e mbak karmonah anti gedorrr >//<
         </div>
         <a href="https://api.whatsapp.com/send?phone=628819483537&text=Terimakasih%20(isi%20pesan%20mu)" class="button">BALAS??</a>
         <div class="text text-bottom-left">
-           mas fardann icikiwirr sigma abiezzz :D
+           mas selda roooowrr cik
         </div> 
         <div class="box box-bottom-right"> 
-            <img src="pardan2.jpg" alt="Image 2"> 
+            <img src="photo_2025-03-01_20-18-57.jpg" alt="Image 2"> 
     </div> 
 </body>
 </html>
