Update next.html selda

--- a/next.html
+++ b/next.html
@@ -107,7 +107,7 @@
     </audio>
     <div class="container"> 
         <div class="box box-top-left"> 
-            <img src="photo_2025-03-01_20-18-59.jpg" alt="Image 1"> 
+            <img src="selda 2.jpg" alt="Image 1"> 
         </div> 
         <div class="text text-top-right">
             dar der dor anak e mbak karmonah anti gedorrr >//<
@@ -117,7 +117,7 @@
            mas selda roooowrr cik
         </div> 
         <div class="box box-bottom-right"> 
-            <img src="photo_2025-03-01_20-18-57.jpg" alt="Image 2"> 
+            <img src="selda 1.jpg" alt="Image 2"> 
     </div> 
 </body>
 </html>
